@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-12T08:11:05Z",
-  "count" : 37,
-  "count_minmax" : [ 0, 37 ],
-  "count_prev_day_inc" : 94,
+  "timestamp" : "2022-05-12T16:14:13Z",
+  "count" : 42,
+  "count_minmax" : [ 0, 42 ],
+  "count_prev_day_inc" : 99,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
   "uniques_minmax" : [ 0, 1 ],
