@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-12T08:11:05Z",
+  "timestamp" : "2022-05-12T16:14:13Z",
   "count_outdated" : 8,
   "uniques_outdated" : 2,
-  "count" : 324,
+  "count" : 329,
   "uniques" : 13,
   "views" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 37,
-      "count_minmax": [ 0, 37 ],
+      "count": 42,
+      "count_minmax": [ 0, 42 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
